dataset1235/2025-2/805158916/users/4259475193/executions/3435325918_4093783519.log
== RUN (2025-09-03 14:49:58)
-- CODE: 
#print(mensagem.upper())

nome1 = 'dragão'
nome2 = 'harpia'
nome3 = 'Dragão'

print(nome > nome2)
print(nome < nome2)
print(nome == nome3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:50:04)
-- CODE: 
#print(mensagem.upper())

nome1 = 'dragão'
nome2 = 'harpia'
nome3 = 'Dragão'

print(nome > nome2)
print(nome < nome2)
print(nome == nome3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:50:00)
-- CODE: 
#print(mensagem.upper())

nome1 = 'dragão'
nome2 = 'harpia'
nome3 = 'Dragão'

print(nome > nome2)
print(nome < nome2)
print(nome == nome3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:50:37)
-- CODE: 
#print(mensagem.upper())

nome1 = 'dragao'
nome2 = 'harpia'
nome3 = 'Dragao'

print(nome > nome2)
print(nome < nome2)
print(nome == nome3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nome > nome2)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'nome1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
